@@ -1,0 +1,17 @@
+#
+# set AGW engine monitoring
+#
+# $Id$
+#
+
+my $self = shift;
+return (1, $self->msg('e5')) if $self->priv < 9;
+if ($AGWMsg::monitor == 0) {
+	AGWMsg::_sendf('m');
+	$AGWMsg::monitor = 1;
+	return (1, $self->msg('mone'));
+}
+return (1);
+
+
+
